syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

enum PaymentStatus {
  ACTIVE = 0;
  CANCELLED = 1;
}

message Payment {
  string id = 1;
  float amount = 2;
  google.protobuf.Timestamp startTimestamp = 3;
  google.protobuf.Timestamp lastRepayTimestamp = 4;
  PaymentStatus status = 5;
  google.protobuf.Duration interval = 6;
  string accountId = 7;
  string recipient = 8;
}